# poar-core

./: CHANGELOG.md  COMMIT_MESSAGES.md  CRYPTO_INTEGRATION_GUIDE.md  Cargo.toml  Cargo.toml.bak  POAR_CRYPTO_BLOG.md  POAR_CRYPTO_TEST.md  POAR_ECONOMY.md  RELEASE_NOTES.md  TODO  ZK_PROOF.md  build.rs
docs/: CIRCUIT_OPTIMIZATION.md  HASH_NTEGRATION.md  POAR-BLOCKCHAIN-ARCHITECTURE.md  TOKEN_UNITS.md
docs/phases/: phase1-foundation.md  phase2-consensus.md  phase3-blockchain.md  phase4-storage.md  phase5-network.md  phase6-api.md  phase7-wallet.md
proto/: block.proto  finality.proto  transaction.proto
src/: cli.rs  lib.rs  main.rs
src/api/: graphql.rs  jsonrpc.rs  mod.rs  rest.rs  websocket.rs
src/consensus/: circuits.rs  engine.rs  finality.rs  mod.rs  optimization.rs  validator.rs  zksnark.rs
src/consensus/circuits/: mod.rs  optimized.rs
src/crypto/: falcon.rs  hash.rs  hash_based_multi_sig.rs  mod.rs  poseidon.rs  signature.rs  xmss.rs  zk_proof.rs
src/crypto/wots/: common.rs  keygen.rs  mod.rs  params.rs  sign.rs  verify.rs
src/network/: discovery.rs  mod.rs  network_manager.rs  p2p.rs  protocol.rs
src/optimization/: async_optimization.rs  cache_optimization.rs  compression.rs  cpu_optimization.rs  gpu_optimization.rs  memory_optimization.rs  mod.rs  network_optimization.rs  profiling.rs  simd_optimization.rs  zk_optimization.rs
src/proto/: mod.rs  poar.rs
src/storage/: database.rs  metrics.rs  mod.rs  persistence.rs  state.rs  state_storage.rs  trie.rs
src/testing/: benchmarks.rs  integration_tests.rs  mod.rs  security_tests.rs  unit_tests.rs
src/types/: address.rs  block.rs  hash.rs  mod.rs  proof.rs  signature.rs  token.rs  transaction.rs  validator.rs
src/utils/: config.rs  metrics.rs  mod.rs  time.rs
src/vm/: mod.rs  opcodes.rs  runtime.rs  zkvm.rs
src/wallet/: governance.rs  hardware.rs  hd_wallet.rs  key_storage.rs  mod.rs  transaction_manager.rs  zk_wallet.rs
