[package]
name = "poar-core"
version = "0.1.0"
edition = "2021"
authors = ["POAR Team <team@poar.network>"]
description = "POAR ZK-PoV Consensus Blockchain Core - Revolutionary Zero-Knowledge Proof of Validity"
license = "MIT"
repository = "https://github.com/nzengi/poar-core"
keywords = ["blockchain", "zero-knowledge", "consensus", "zk-pov", "cryptocurrency"]
categories = ["cryptography", "network-programming", "algorithms"]

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
serde-big-array = "0.5"

# Cryptography - ZK Proofs
ark-ff = "0.4"
ark-ec = "0.4"
ark-poly = "0.4"
ark-serialize = "0.4"
ark-std = "0.4"
ark-bls12-381 = "0.4"
ark-groth16 = "0.4"
ark-relations = "0.4"
ark-r1cs-std = "0.4"

# Cryptography - General
blake3 = "1.5"
sha2 = "0.10"
sha3 = "0.10"
ed25519-dalek = { version = "2.0", features = ["serde"] }
x25519-dalek = "2.0"
rand = "0.8"
rand_core = "0.6"

# Networking
libp2p = { version = "0.53", features = ["tcp", "mdns", "noise", "yamux", "gossipsub", "kad"] }
libp2p-swarm = "0.44"

# Storage
rocksdb = "0.21"
sled = "0.34"

# Logging and monitoring
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
log = "0.4"
env_logger = "0.10"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Time and utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
hex = "0.4"
base64 = "0.21"

# Metrics and monitoring
prometheus = "0.13"
metrics = "0.21"

# Configuration
config = "0.13"
clap = { version = "4.0", features = ["derive"] }

# Testing
proptest = "1.0"

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5"
tempfile = "3.0"

[features]
default = ["full"]
full = ["consensus", "networking", "storage", "vm"]
consensus = []
networking = []
storage = []
vm = []

[[bin]]
name = "poar-node"
path = "src/main.rs"

[[bin]]
name = "poar-cli"
path = "src/cli.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
overflow-checks = true
